# feed

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  README  STYLE.md  TODO.md  fees_sources.txt  pyproject.toml  structure.md
lib/: config.py  context.py  rate_limiter.py  rate_limits.py  util.py
lib/analysis/: NOTES  __init__.py  comment_selector.py  description_filter.py  processor.py  text_features.py  yt_transcript_formatter.py  ytapi_video_extractor.py
lib/youtube/: __init__.py  channel.py  client.py  comment.py  media.py  playlist.py  ratings.py  subscription.py  transcript.py  transcript_meta.py  video.py  video_iterator.py
tests/: conftest.py  test_util.py  test_z_file_permissions.py  test_z_lint.py  test_z_markdown_links.py  test_z_style.py
tests/analysis/: test_comment_selector.py  test_extractor.py  test_formatter.py  test_text_features.py
tests/youtube/: test_channel.py  test_comments.py  test_download_transcript.py  test_fetch_transcripts.py  test_media.py  test_rate_limiter.py  test_rating.py  test_subscription.py  test_transcript.py  test_video.py
